Make iframes and objects obey CSS max-width/height and min-width/height if their sizes are unconstrained.  Bug 181875, r+sr=roc+moz